<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:background="#FF0000FF"
                android:text="TextView 1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFFFF"
                android:text="TextView 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFF00FF"
                android:text="TextView 1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF00"
                android:text="TextView 1" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/hello" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher"
            android:textColor="#FF000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aCheckBox" />

        <CheckBox
            android:id="@+id/checkchocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chocolate" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aRadioGroup" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate" />

            <RadioButton
                android:id="@+id/hug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hug" />

            <RadioButton
                android:id="@+id/santaclaus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/santaclaus" />
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aImageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aImageButton" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aSlider" />

        <SeekBar
            android:id="@+id/seek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aProgressbar" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000FF"
            android:text="@string/aEditText" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />
    </LinearLayout>

</ScrollView>